test donate page nav link problem

--- a/donate.html
+++ b/donate.html
@@ -35,24 +35,24 @@
 							      <li role="presentation" class="dropdown">
 							        <a id="drop-sdk-tools" href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>Android SDK Tools</span></a>
 							        <ul id="menu-sdl-tools" class="dropdown-menu" role="menu" aria-labelledby="drop-sdk-tools">
-							          <li role="presentation"><a role="menuitem" tabindex="0" href="index.html#android-studio">Android Studio</a></li>							          
-							          <li role="presentation"><a role="menuitem" tabindex="2" href="index.html#sdk-tools">SDK Tools</a></li>
-							          <li role="presentation"><a role="menuitem" tabindex="2" href="index.html#sdk-platform-tools">Platform-tools</a></li>
-							          <li role="presentation"><a role="menuitem" tabindex="2" href="index.html#build-tools">Build Tools</a></li>
-							          <li role="presentation"><a role="menuitem" tabindex="3" href="index.html#sdk-list">SDK</a></li>
-							          <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#ndk">NDK</a></li>
-							          <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#jdk">JDK</a></li>
-							          <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#adt-bundle">ADT Bundle</a></li>
-							          <li role="presentation"><a role="menuitem" tabindex="1" href="index.html#adt-plugin">ADT Plugin</a></li>  
-							          <li role="presentation"><a role="menuitem" tabindex="4" href="index.html#sdk-system-images">SDK System images</a></li>
-							          <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#googlemap-apis-sdk">GoogleMap APIs SDK</a></li>
-							          <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#google-glass-sdk">Google Glass SDK</a></li>
-							          <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#google-tv-addon">Google TV Addon</a></li>       
-							          <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#android-sdk-extras">Android SDK Extras</a></li>
-							          <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#support-library">Support Library</a></li>
-							          <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#sdk-samples">SDK Samples</a></li>
-							          <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#android-framework-source-code">Android Framework Source Code</a></li>
-							          <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#android-l-preview-system-image">Android L Preview System Image</a></li>							                
+							          <li role="presentation"><a role="menuitem" tabindex="0" href="index.html#android-studio" target="_blank">Android Studio</a></li>							          
+							          <li role="presentation"><a role="menuitem" tabindex="2" href="index.html#sdk-tools" target="_blank">SDK Tools</a></li>
+							          <li role="presentation"><a role="menuitem" tabindex="2" href="index.html#sdk-platform-tools" target="_blank">Platform-tools</a></li>
+							          <li role="presentation"><a role="menuitem" tabindex="2" href="index.html#build-tools" target="_blank">Build Tools</a></li>
+							          <li role="presentation"><a role="menuitem" tabindex="3" href="index.html#sdk-list" target="_blank">SDK</a></li>
+							          <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#ndk" target="_blank">NDK</a></li>
+							          <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#jdk" target="_blank">JDK</a></li>
+							          <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#adt-bundle" target="_blank">ADT Bundle</a></li>
+							          <li role="presentation"><a role="menuitem" tabindex="1" href="index.html#adt-plugin" target="_blank">ADT Plugin</a></li>  
+							          <li role="presentation"><a role="menuitem" tabindex="4" href="index.html#sdk-system-images" target="_blank">SDK System images</a></li>
+							          <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#googlemap-apis-sdk" target="_blank">GoogleMap APIs SDK</a></li>
+							          <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#google-glass-sdk" target="_blank">Google Glass SDK</a></li>
+							          <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#google-tv-addon" target="_blank">Google TV Addon</a></li>       
+							          <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#android-sdk-extras" target="_blank">Android SDK Extras</a></li>
+							          <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#support-library" target="_blank">Support Library</a></li>
+							          <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#sdk-samples" target="_blank">SDK Samples</a></li>
+							          <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#android-framework-source-code" target="_blank">Android Framework Source Code</a></li>
+							          <li role="presentation"><a role="menuitem" tabindex="-1" href="index.html#android-l-preview-system-image" target="_blank">Android L Preview System Image</a></li>							                
 							        </ul>
 							      </li>
 							      
