Add donate info

--- a/donate.html
+++ b/donate.html
@@ -778,10 +778,10 @@
 														<td align="left">¥1</td>
 														<td align="center">蟹小扬</td>
 														<td align="left">¥12.12</td>														
-														<td align="center"></td>
-														<td align="left"></td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">文武英杰</td>
+														<td align="left">¥10.24</td>
+														<td align="center">短暂轨迹</td>
+														<td align="left">¥3</td>
 													</tr>
 											</tbody>
 									</table>
