Add donate info

--- a/donate.html
+++ b/donate.html
@@ -786,10 +786,10 @@
 													<tr>
 														<td align="center">Jason</td>
 														<td align="left">¥1</td>
-														<td align="center"></td>
-														<td align="left"></td>														
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">胖子胖子</td>
+														<td align="left">¥1</td>														
+														<td align="center">Kenny</td>
+														<td align="left">¥10.24</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
