--- a/donate.html
+++ b/donate.html
@@ -793,6 +793,16 @@
 														<td align="center">渔舟小调</td>
 														<td align="left">¥1</td>
 													</tr>
+													<tr>
+														<td align="center">替身</td>
+														<td align="left">¥1</td>
+														<td align="center"></td>
+														<td align="left"></td>														
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
