Add donate info

--- a/donate.html
+++ b/donate.html
@@ -796,8 +796,8 @@
 													<tr>
 														<td align="center">替身</td>
 														<td align="left">¥1</td>
-														<td align="center"></td>
-														<td align="left"></td>														
+														<td align="center">Suyoung</td>
+														<td align="left">¥1</td>														
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
