Add donate info

--- a/donate.html
+++ b/donate.html
@@ -798,8 +798,8 @@
 														<td align="left">¥1</td>
 														<td align="center">Suyoung</td>
 														<td align="left">¥1</td>														
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">feiyu</td>
+														<td align="left">¥10.24</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
