Add donate info

--- a/donate.html
+++ b/donate.html
@@ -800,8 +800,8 @@
 														<td align="left">¥1</td>														
 														<td align="center">feiyu</td>
 														<td align="left">¥10.24</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">the flight of time</td>
+														<td align="left">¥1.86</td>
 													</tr>
 											</tbody>
 									</table>
