Add donate info

--- a/donate.html
+++ b/donate.html
@@ -803,6 +803,16 @@
 														<td align="center">the flight of time</td>
 														<td align="left">¥1.86</td>
 													</tr>
+													<tr>
+														<td align="center">YAMIN</td>
+														<td align="left">¥10</td>
+														<td align="center"></td>
+														<td align="left"></td>														
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>YAMIN
 											</tbody>
 									</table>
 		            </div>
