--- a/donate.html
+++ b/donate.html
@@ -806,8 +806,8 @@
 													<tr>
 														<td align="center">YAMIN</td>
 														<td align="left">¥10</td>
-														<td align="center"></td>
-														<td align="left"></td>														
+														<td align="center">kaim</td>
+														<td align="left">¥8</td>														
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
