Add donate info

--- a/donate.html
+++ b/donate.html
@@ -808,8 +808,8 @@
 														<td align="left">¥10</td>
 														<td align="center">kaim</td>
 														<td align="left">¥8</td>														
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">静</td>
+														<td align="left">¥10</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>YAMIN
