Add donate info

--- a/donate.html
+++ b/donate.html
@@ -810,9 +810,19 @@
 														<td align="left">¥8</td>														
 														<td align="center">静</td>
 														<td align="left">¥10</td>
+														<td align="center">saarland</td>
+														<td align="left">¥100</td>
+													</tr>
+													<tr>
+														<td align="center">Norman</td>
+														<td align="left">¥0.7</td>
+														<td align="center">Lee Three</td>
+														<td align="left">¥1</td>														
 														<td align="center"></td>
 														<td align="left"></td>
-													</tr>YAMIN
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
