Add donate info

--- a/donate.html
+++ b/donate.html
@@ -817,9 +817,19 @@
 														<td align="center">Norman</td>
 														<td align="left">¥0.7</td>
 														<td align="center">Lee Three</td>
-														<td align="left">¥1</td>														
+														<td align="left">¥1</td>
+														<td align="center">林正</td>
+														<td align="left">¥10</td>													
+														<td align="center">霏雯</td>
+														<td align="left">¥9.69</td>
+													</tr>
+													<tr>
+														<td align="center">春雷</td>
+														<td align="left">¥10</td>
 														<td align="center"></td>
 														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>													
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
