Add donate info

--- a/donate.html
+++ b/donate.html
@@ -826,10 +826,10 @@
 													<tr>
 														<td align="center">春雷</td>
 														<td align="left">¥10</td>
-														<td align="center"></td>
-														<td align="left"></td>
-														<td align="center"></td>
-														<td align="left"></td>													
+														<td align="center">祥龙</td>
+														<td align="left">¥10</td>	
+														<td align="center">梁登理</td>
+														<td align="left">¥66.66</td>														
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
