Add donate info

--- a/donate.html
+++ b/donate.html
@@ -830,6 +830,16 @@
 														<td align="left">¥10</td>	
 														<td align="center">梁登理</td>
 														<td align="left">¥66.66</td>														
+														<td align="center">Cortana</td>
+														<td align="left">¥10</td>
+													</tr>
+													<tr>
+														<td align="center">Details</td>
+														<td align="left">¥6</td>
+														<td align="center"></td>
+														<td align="left"></td>	
+														<td align="center"></td>
+														<td align="left"></td>														
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
