Add donate info

--- a/donate.html
+++ b/donate.html
@@ -836,12 +836,12 @@
 													<tr>
 														<td align="center">Details</td>
 														<td align="left">¥6</td>
-														<td align="center"></td>
-														<td align="left"></td>	
-														<td align="center"></td>
-														<td align="left"></td>														
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">如风</td>
+														<td align="left">¥6</td>	
+														<td align="center">帮我带点吃的回来</td>
+														<td align="left">¥10.24</td>														
+														<td align="center">蔡振军</td>
+														<td align="left">¥10</td>
 													</tr>
 											</tbody>
 									</table>
