Add donate info

--- a/donate.html
+++ b/donate.html
@@ -843,6 +843,16 @@
 														<td align="center">蔡振军</td>
 														<td align="left">¥10</td>
 													</tr>
+													<tr>
+														<td align="center">Rookie</td>
+														<td align="left">¥5</td>
+														<td align="center">林</td>
+														<td align="left">¥16.88</td>	
+														<td align="center"></td>
+														<td align="left"></td>														
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
