Add donate info

--- a/donate.html
+++ b/donate.html
@@ -848,10 +848,10 @@
 														<td align="left">¥5</td>
 														<td align="center">林</td>
 														<td align="left">¥16.88</td>	
-														<td align="center"></td>
-														<td align="left"></td>														
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">不可说</td>
+														<td align="left">¥1</td>														
+														<td align="center">存华</td>
+														<td align="left">¥11.11</td>
 													</tr>
 											</tbody>
 									</table>
