--- a/donate.html
+++ b/donate.html
@@ -853,6 +853,16 @@
 														<td align="center">存华</td>
 														<td align="left">¥11.11</td>
 													</tr>
+													<tr>
+														<td align="center">威</td>
+														<td align="left">¥8.88</td>
+														<td align="center"></td>
+														<td align="left"></td>	
+														<td align="center"></td>
+														<td align="left"></td>														
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
