Add donate info

--- a/donate.html
+++ b/donate.html
@@ -856,8 +856,8 @@
 													<tr>
 														<td align="center">威</td>
 														<td align="left">¥8.88</td>
-														<td align="center"></td>
-														<td align="left"></td>	
+														<td align="center">rubyCoco</td>
+														<td align="left">¥1.23</td>	
 														<td align="center"></td>
 														<td align="left"></td>														
 														<td align="center"></td>
