Add donate info

--- a/donate.html
+++ b/donate.html
@@ -858,10 +858,10 @@
 														<td align="left">¥8.88</td>
 														<td align="center">rubyCoco</td>
 														<td align="left">¥1.23</td>	
-														<td align="center"></td>
-														<td align="left"></td>														
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">恍若如梦</td>
+														<td align="left">¥70</td>														
+														<td align="center">孙梦聪</td>
+														<td align="left">¥6</td>
 													</tr>
 											</tbody>
 									</table>
