--- a/donate.html
+++ b/donate.html
@@ -717,7 +717,7 @@
 														<td align="center">_嗼小c</td>
 														<td align="left">¥1</td>
 														<td align="center">远钦</td>
-														<td align="left">¥8.88</td>
+														<td align="left">¥8.88+¥8.88</td>
 														<td align="center">徐风</td>
 														<td align="left">¥1</td>
 														<td align="center">定甲</td>
@@ -862,6 +862,16 @@
 														<td align="left">¥70</td>														
 														<td align="center">孙梦聪</td>
 														<td align="left">¥6</td>
+													</tr>
+													<tr>
+														<td align="center">自在飞叶</td>
+														<td align="left">¥9.9</td>
+														<td align="center">bigassdoggg</td>
+														<td align="left">¥1</td>	
+														<td align="center">快播小方刷机</td>
+														<td align="left">¥1</td>														
+														<td align="center">小伟</td>
+														<td align="left">¥72</td>
 													</tr>
 											</tbody>
 									</table>
