Add donate info

--- a/donate.html
+++ b/donate.html
@@ -890,6 +890,16 @@
 														<td align="left">¥5</td>	
 														<td align="center">吴东胜</td>
 														<td align="left">¥10.1</td>														
+														<td align="center">风南飞</td>
+														<td align="left">¥10</td>
+													</tr>
+													<tr>
+														<td align="center">王刚</td>
+														<td align="left">¥1</td>
+														<td align="center">何栋</td>
+														<td align="left">¥1</td>	
+														<td align="center">leeon</td>
+														<td align="left">¥6.66</td>														
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
