Add donate info

--- a/donate.html
+++ b/donate.html
@@ -888,7 +888,7 @@
 														<td align="left">¥0.1</td>
 														<td align="center">weini</td>
 														<td align="left">¥5</td>	
-														<td align="center">吴东胜</td>
+														<td align="center">吴胜东</td>
 														<td align="left">¥10.1</td>														
 														<td align="center">风南飞</td>
 														<td align="left">¥10</td>
@@ -898,10 +898,31 @@
 														<td align="left">¥1</td>
 														<td align="center">何栋</td>
 														<td align="left">¥1</td>	
-														<td align="center">leeon</td>
+														<td align="center"><a href="https://github.com/leeon7">leeon</a></td>
 														<td align="left">¥6.66</td>														
+														<td align="center">YI</td>
+														<td align="left">¥5</td>
+													</tr>
+													<tr>		
+														<td align="center">梅卡瓦</td>
+														<td align="left">¥5</td>
+														<td align="center">o0大旭0o</td>
+														<td align="left">¥0.01</td>	
+														<td align="center">杰</td>
+														<td align="left">¥10</td>														
+														<td align="center">looper_</td>
+														<td align="left">¥5</td>
+													</tr>
+													<tr>
+														<td align="center">HyeKyoZ</td>
+														<td align="left">¥5</td>		
+														<td align="center">轻颜墨兮</td>
+														<td align="left">¥2.15</td>
 														<td align="center"></td>
-														<td align="left"></td>
+														<td align="left"></td>	
+														<td align="center"></td>
+														<td align="left"></td>														
+														
 													</tr>
 											</tbody>
 									</table>
