Add donate info

--- a/donate.html
+++ b/donate.html
@@ -918,10 +918,10 @@
 														<td align="left">¥5</td>		
 														<td align="center">轻颜墨兮</td>
 														<td align="left">¥2.15</td>
-														<td align="center"></td>
-														<td align="left"></td>	
-														<td align="center"></td>
-														<td align="left"></td>														
+														<td align="center">大辉郎</td>
+														<td align="left">¥64</td>	
+														<td align="center">Asi</td>
+														<td align="left">¥10</td>														
 														
 													</tr>
 											</tbody>
