Add donate info

--- a/donate.html
+++ b/donate.html
@@ -916,13 +916,22 @@
 													<tr>
 														<td align="center">HyeKyoZ</td>
 														<td align="left">¥5</td>		
-														<td align="center">轻颜墨兮</td>
+														<td align="center">倾颜墨兮</td>
 														<td align="left">¥2.15</td>
 														<td align="center">大辉郎</td>
 														<td align="left">¥64</td>	
 														<td align="center">Asi</td>
 														<td align="left">¥10</td>														
-														
+													</tr>
+													<tr>
+														<td align="center">lcehiker</td>
+														<td align="left">¥2</td>		
+														<td align="center">泽林</td>
+														<td align="left">¥20.16</td>
+														<td align="center">suppender</td>
+														<td align="left">¥6.66</td>	
+														<td align="center"><a href="jackyshan.gitcafe.io">jackyshan</a></td>
+														<td align="left">¥10.24</td>														
 													</tr>
 											</tbody>
 									</table>
