Add donate info

--- a/donate.html
+++ b/donate.html
@@ -933,6 +933,16 @@
 														<td align="center"><a href="jackyshan.gitcafe.io">jackyshan</a></td>
 														<td align="left">¥10.24</td>														
 													</tr>
+													<tr>
+														<td align="center">水东</td>
+														<td align="left">¥1.8</td>		
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>	
+														<td align="center"></td>
+														<td align="left"></td>														
+													</tr>
 											</tbody>
 									</table>
 		            </div>
