Add donate info

--- a/donate.html
+++ b/donate.html
@@ -936,12 +936,12 @@
 													<tr>
 														<td align="center">水东</td>
 														<td align="left">¥1.8</td>		
-														<td align="center"></td>
-														<td align="left"></td>
-														<td align="center"></td>
-														<td align="left"></td>	
-														<td align="center"></td>
-														<td align="left"></td>														
+														<td align="center">he1191</td>
+														<td align="left">¥10.24</td>
+														<td align="center"><a href="http://www.jayfeng.com">冯建</a></td>
+														<td align="left">¥20.16</td>	
+														<td align="center">hao_day</td>
+														<td align="left">¥8</td>														
 													</tr>
 											</tbody>
 									</table>
