Add donate info

--- a/donate.html
+++ b/donate.html
@@ -943,6 +943,16 @@
 														<td align="center">hao_day</td>
 														<td align="left">¥8</td>														
 													</tr>
+													<tr>
+														<td align="center">zjp</td>
+														<td align="left">¥10.24</td>		
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>	
+														<td align="center"></td>
+														<td align="left"></td>														
+													</tr>
 											</tbody>
 									</table>
 		            </div>
