Add donate info

--- a/donate.html
+++ b/donate.html
@@ -930,7 +930,7 @@
 														<td align="left">¥20.16</td>
 														<td align="center">suppender</td>
 														<td align="left">¥6.66</td>	
-														<td align="center"><a href="jackyshan.gitcafe.io">jackyshan</a></td>
+														<td align="center"><a href="http://jackyshan.gitcafe.io">jackyshan</a></td>
 														<td align="left">¥10.24</td>														
 													</tr>
 													<tr>
@@ -946,12 +946,12 @@
 													<tr>
 														<td align="center">zjp</td>
 														<td align="left">¥10.24</td>		
-														<td align="center"></td>
-														<td align="left"></td>
-														<td align="center"></td>
-														<td align="left"></td>	
-														<td align="center"></td>
-														<td align="left"></td>														
+														<td align="center">小鹏</td>
+														<td align="left">¥10</td>
+														<td align="center">P_C</td>
+														<td align="left">¥5</td>	
+														<td align="center">向金明</td>
+														<td align="left">¥50</td>														
 													</tr>
 											</tbody>
 									</table>
