Add donate info

--- a/donate.html
+++ b/donate.html
@@ -953,6 +953,16 @@
 														<td align="center">向金明</td>
 														<td align="left">¥50</td>														
 													</tr>
+													<tr>
+														<td align="center">哈娃娃</td>
+														<td align="left">¥10.24</td>		
+														<td align="center">sharpice</td>
+														<td align="left">¥10</td>
+														<td align="center">雪雁</td>
+														<td align="left">¥10.24</td>	
+														<td align="center"></td>
+														<td align="left"></td>														
+													</tr>
 											</tbody>
 									</table>
 		            </div>
