Add donate info

--- a/donate.html
+++ b/donate.html
@@ -960,6 +960,16 @@
 														<td align="left">¥10</td>
 														<td align="center">雪雁</td>
 														<td align="left">¥10.24</td>	
+														<td align="center">臭</td>
+														<td align="left">¥3</td>														
+													</tr>
+													<tr>
+														<td align="center">youngly</td>
+														<td align="left">¥1.06</td>		
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>	
 														<td align="center"></td>
 														<td align="left"></td>														
 													</tr>
