Add donate info

--- a/donate.html
+++ b/donate.html
@@ -966,12 +966,12 @@
 													<tr>
 														<td align="center">youngly</td>
 														<td align="left">¥1.06</td>		
-														<td align="center"></td>
-														<td align="left"></td>
-														<td align="center"></td>
-														<td align="left"></td>	
-														<td align="center"></td>
-														<td align="left"></td>														
+														<td align="center">李留齐</td>
+														<td align="left">¥2.22</td>
+														<td align="center">sison</td>
+														<td align="left">¥5</td>	
+														<td align="center">CC云</td>
+														<td align="left">¥12</td>														
 													</tr>
 											</tbody>
 									</table>
