Add donate info

--- a/donate.html
+++ b/donate.html
@@ -983,6 +983,16 @@
 														<td align="center">Constantine</td>
 														<td align="left">¥68</td>														
 													</tr>
+													<tr>
+														<td align="center">陈庚</td>
+														<td align="left">¥1</td>		
+														<td align="center">xxx</td>
+														<td align="left">¥1.24</td>
+														<td align="center"></td>
+														<td align="left"></td>	
+														<td align="center"></td>
+														<td align="left"></td>														
+													</tr>
 											</tbody>
 									</table>
 		            </div>
