Add donate info

--- a/donate.html
+++ b/donate.html
@@ -988,8 +988,18 @@
 														<td align="left">¥1</td>		
 														<td align="center">xxx</td>
 														<td align="left">¥1.24</td>
-														<td align="center"></td>
-														<td align="left"></td>	
+														<td align="center">为这个时代作证</td>
+														<td align="left">¥6.66</td>	
+														<td align="center">水东</td>
+														<td align="left">¥5</td>														
+													</tr>
+													<tr>
+														<td align="center">芹菜</td>
+														<td align="left">¥5</td>		
+														<td align="center">欧阳广</td>
+														<td align="left">¥3</td>
+														<td align="center">烂苹果_Apple</td>
+														<td align="left">¥1.32</td>	
 														<td align="center"></td>
 														<td align="left"></td>														
 													</tr>
