Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1000,8 +1000,8 @@
 														<td align="left">¥3</td>
 														<td align="center">烂苹果_Apple</td>
 														<td align="left">¥1.32</td>	
-														<td align="center"></td>
-														<td align="left"></td>														
+														<td align="center">赶路人</td>
+														<td align="left">¥2</td>														
 													</tr>
 											</tbody>
 									</table>
