Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1003,6 +1003,16 @@
 														<td align="center">赶路人</td>
 														<td align="left">¥2</td>														
 													</tr>
+													<tr>
+														<td align="center">孙勇</td>
+														<td align="left">¥1</td>		
+														<td align="center">明少</td>
+														<td align="left">¥18.88</td>
+														<td align="center"></td>
+														<td align="left"></td>	
+														<td align="center"></td>
+														<td align="left"></td>														
+													</tr>
 											</tbody>
 									</table>
 		            </div>
