Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1036,8 +1036,8 @@
 													<tr>		
 														<td align="center">yzc</td>
 														<td align="left">¥6.66</td>	
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">家武</td>
+														<td align="left">¥5</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
