--- a/donate.html
+++ b/donate.html
@@ -1035,11 +1035,11 @@
 													</tr>
 													<tr>		
 														<td align="center">yzc</td>
-														<td align="left">¥6.66</td>	
+														<td align="left">¥6.66</td>
+														<td align="center">袁玉</td>
+														<td align="left">¥10</td>
 														<td align="center">家武</td>
 														<td align="left">¥5</td>
-														<td align="center"></td>
-														<td align="left"></td>
 														<td align="center"></td>
 														<td align="left"></td>															
 													</tr>
