--- a/donate.html
+++ b/donate.html
@@ -717,7 +717,7 @@
 														<td align="center">_嗼小c</td>
 														<td align="left">¥1</td>
 														<td align="center">远钦</td>
-														<td align="left">¥8.88+¥8.88</td>
+														<td align="left">¥8.88+¥8.88+¥8.88</td>
 														<td align="center">徐风</td>
 														<td align="left">¥1</td>
 														<td align="center">定甲</td>
