--- a/donate.html
+++ b/donate.html
@@ -1040,6 +1040,16 @@
 														<td align="left">¥10</td>
 														<td align="center">家武</td>
 														<td align="left">¥5</td>
+														<td align="center">晨曦</td>
+														<td align="left">¥1</td>															
+													</tr>
+													<tr>		
+														<td align="center">真屌丝</td>
+														<td align="left">¥10.24</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
 														<td align="center"></td>
 														<td align="left"></td>															
 													</tr>
