Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1046,12 +1046,12 @@
 													<tr>		
 														<td align="center">真屌丝</td>
 														<td align="left">¥10.24</td>
-														<td align="center"></td>
-														<td align="left"></td>
-														<td align="center"></td>
-														<td align="left"></td>
-														<td align="center"></td>
-														<td align="left"></td>															
+														<td align="center">繁星</td>
+														<td align="left">¥1</td>
+														<td align="center">大使</td>
+														<td align="left">¥10</td>
+														<td align="center">落笔画忧伤</td>
+														<td align="left">¥2.49</td>															
 													</tr>
 											</tbody>
 									</table>
