Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1053,6 +1053,16 @@
 														<td align="center">落笔画忧伤</td>
 														<td align="left">¥2.49</td>															
 													</tr>
+													<tr>		
+														<td align="center">yizhan_zjz</td>
+														<td align="left">¥5</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>															
+													</tr>
 											</tbody>
 									</table>
 		            </div>
