Add donate info

--- a/donate.html
+++ b/donate.html
@@ -967,7 +967,7 @@
 														<td align="center">youngly</td>
 														<td align="left">¥1.06</td>		
 														<td align="center">李留齐</td>
-														<td align="left">¥2.22</td>
+														<td align="left">¥2.22+¥1.11</td>
 														<td align="center">sison</td>
 														<td align="left">¥5</td>	
 														<td align="center">CC云</td>
@@ -1056,12 +1056,12 @@
 													<tr>		
 														<td align="center">yizhan_zjz</td>
 														<td align="left">¥5</td>
-														<td align="center"></td>
-														<td align="left"></td>
-														<td align="center"></td>
-														<td align="left"></td>
-														<td align="center"></td>
-														<td align="left"></td>															
+														<td align="center">峰</td>
+														<td align="left">¥5.03</td>
+														<td align="center">乐俊</td>
+														<td align="left">¥1</td>
+														<td align="center">小正</td>
+														<td align="left">¥20</td>															
 													</tr>
 											</tbody>
 									</table>
