Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1063,6 +1063,16 @@
 														<td align="center">小正</td>
 														<td align="left">¥20</td>															
 													</tr>
+													<tr>		
+														<td align="center">lianyu</td>
+														<td align="left">¥10.24</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>															
+													</tr>
 											</tbody>
 									</table>
 		            </div>
