add donate info

--- a/donate.html
+++ b/donate.html
@@ -1066,6 +1066,16 @@
 													<tr>		
 														<td align="center">lianyu</td>
 														<td align="left">¥10.24</td>
+														<td align="center">风一样的大叔</td>
+														<td align="left">¥0.5</td>
+														<td align="center">Jhon</td>
+														<td align="left">¥5.41</td>
+														<td align="center">only</td>
+														<td align="left">0.1</td>															
+													</tr>
+													<tr>		
+														<td align="center">死灵仓鬼</td>
+														<td align="left">¥10</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
