add donate info

--- a/donate.html
+++ b/donate.html
@@ -1076,6 +1076,16 @@
 													<tr>		
 														<td align="center">死灵仓鬼</td>
 														<td align="left">¥10</td>
+														<td align="center"><a href="http://iamaboy.xyz/" target="_blank">Qusay</a></td>
+														<td align="left">¥5</td>
+														<td align="center">行者无疆</td>
+														<td align="left">¥5</td>
+														<td align="center">qian</td>
+														<td align="left">¥2</td>															
+													</tr>
+													<tr>		
+														<td align="center">Lancer</td>
+														<td align="left">¥5</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
