Modify codekk link 404 error

--- a/gay_firends.html
+++ b/gay_firends.html
@@ -12,7 +12,7 @@
     <link href="static/css/google-roboto-font-face.css" rel="stylesheet" type="text/css">
     <link href="static/css/backtotop.css" rel="stylesheet" type="text/css">
     <!--[if lt IE 9]><script src="static/html5shiv.min.js"></script><![endif]-->
-    
+
 	<link rel="shortcut icon" href="static/image/favicon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="static/image/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="static/image/apple-touch-icon-114x114.png">
@@ -184,7 +184,7 @@
 								       			 </a>
 											</li>
 											<li>
-												<a href="http:www.codekk.com" target="_blank" title="codeKK，专注于开源项目源码解析及优秀开源项目的分享">
+												<a href="http://www.codekk.com" target="_blank" title="codeKK，专注于开源项目源码解析及优秀开源项目的分享">
 										       		<img src="http://www.codekk.com/images/codekk-com-130-64.png" />
 								        		</a>
 											</li>
