Add grank.io logo and reanme file name

--- a/gay_friends.html
+++ b/gay_friends.html
@@ -162,11 +162,11 @@
 			   <h1 class="content-title">好基友们</h1>
             </div>
 
-			<div class="gay_friends_list clearfix">
+			<div class="gay_friends_list">
 				<ul>
 					<li>
 						<a href="http://gank.io" target="_blank" title="干货集中营，每日分享妹子图 和 技术干货，还有供大家中午休息的休闲视频">
-					    		<img  src="" />
+					    		<img  src="http://ww1.sinaimg.cn/large/610dc034gw1f1lnnpb9tej203n01sdfn.jpg" />
 				    	</a>
 					</li>
 					<li>
