--- a/donate.html
+++ b/donate.html
@@ -161,12 +161,12 @@
                     </p>
                 </div>
                 <div class="donate-method-qr">
-                     <h4 id="alipay" class="donate-method-title" align="center" style="padding: 0;">支付宝</h4>
-                     <img id="donate-method-alipay" class="donate-method-qr-img" src="./static/image/alipay_qr_code.png" />
+                     <h4 class="donate-method-title" align="center" style="padding: 0;">支付宝</h4>
+                     <img class="donate-method-qr-img" src="./static/image/alipay_qr_code.png" />
                  </div>
                  <div class="donate-method-qr">
                      <h4 id="wechat" class="donate-method-title" align="center" style="padding: 0;">微信</h4>
-                     <img id="donate-method-wechat" class="donate-method-qr-img" src="./static/image/weichat_pay_qr_code.png" />
+                     <img class="donate-method-qr-img" src="./static/image/weichat_pay_qr_code.png" />
                  </div>
             </div>
             <!-- 捐赠列表 -->
