Fix made by link error

--- a/index.html
+++ b/index.html
@@ -4259,8 +4259,8 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
         <footer class="inner">
-            <p class="copyright">Made by <a href="https://www.inferjay.com/">脉脉不得语</a></p>
-            <p class="published">Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+            <p class="copyright">Made by <a href="http://www.inferjay.com/" target="_blank">脉脉不得语</a></p>
+            <p class="published">Published with <a href="http://pages.github.com" target="_blank">GitHub Pages</a></p>
         </footer>
     </div>
     <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
