--- a/gay_friends.html
+++ b/gay_friends.html
@@ -219,8 +219,8 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
         <footer class="inner">
-            <p class="copyright">Made by <a href="https://www.inferjay.com/">脉脉不得语</a></p>
-            <p class="published">Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+            <p class="copyright">Made by <a href="http://www.inferjay.com/" target="_blank">脉脉不得语</a></p>
+            <p class="published">Published with <a href="http://pages.github.com" target="_blank">GitHub Pages</a></p>
         </footer>
     </div>
     <script>
