--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                         <li role="presentation"><a role="menuitem" tabindex="-1" href="#free-design-resources">Design Resources</a></li>
                                     </ul>
                                 </li>
-                                <li role="presentation" class="dropdown"><a id="gay_friends" href="gay_friends.html">好基友</a></li>
+                                <li role="presentation" class="dropdown"><a id="gay_friends" href="gay_friends.html">GFriends</a></li>
                                 <!-- <li id="ts-search-input-li"><form><input type="search" id="ts-search-input" placeholder="搜索: Android Studio"></form></li> -->
                                 <li>
                                     <a href="https://github.com/inferjay/AndroidDevTools" data-title="View GitHub Project" class="menu-github-icon"><img src="static/image/icon-github.png" alt="GitHub" /></a>
