--- a/donate.html
+++ b/donate.html
@@ -1086,6 +1086,16 @@
                                 <td>¥1</td>
                                 <td>贺</td>
                                 <td>¥10</td>
+                                <td>小刘子</td>
+                                <td>¥10.24</td>
+                            </tr>
+                            <tr>
+                                <td>超</td>
+                                <td>¥8.88</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
                                 <td></td>
                                 <td></td>
                             </tr>
