Moidfy liaohuqiu.net logo link

--- a/gay_friends.html
+++ b/gay_friends.html
@@ -181,7 +181,7 @@
 	                    </li>
 	                    <li>
 	                        <a href="http://www.liaohuqiu.net" target="_blank" title="秋百万，Make it better.">
-	                            <img src="http://image.liaohuqiu.net/images/links/logo-64-130.png" />
+	                            <img src="http://ww2.sinaimg.cn/large/86e2ff85gw1f1qvio0f2ej203m01s0sl.jpg" />
 	                        </a>
 	                    </li>
 	                    <li>
